# haskell

./: .gitignore  README.md  haskell.cabal
app/: Main.hs
src/: Collatz.hs  FizzBuzz.hs  MinMaxSum.hs  MyLib.hs  Old.hs  PlusMinus.hs  SlackWords.hs  TaylorSeries.hs  Tests.hs  TimeConversion.hs  Words.hs
tests/: Test.hs
