cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kofhagstrom
maintainer:         69386427+kofhagstrom@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        MyLib

    -- Modules included in this library but not exported.
    -- other-modules: 
    
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.7 && <5,
        hspec,
        QuickCheck
    
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5,
        hspec,
        haskell

    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite test

--   type: exitcode-stdio-1.0
--   main-is: test.hs
--   hs-source-dirs:
--       tests
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5,
--       hspec,
--       haskell
--   default-language: Haskell2010